--- a/app/res/layout/custom_multiple_fragment_layout.xml
+++ b/app/res/layout/custom_multiple_fragment_layout.xml
@@ -36,13 +36,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
-        <org.lasque.tusdk.core.view.TuSdkImageView
+
+
+
+        <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
+
+            style="@style/lsq_edit_entryOptionButton2"
             android:id="@+id/lsq_skinButton"
-            android:src="@drawable/lsq_style_default_edit_icon_skin"
-            android:padding="20dp"
+            android:drawableTop="@drawable/lsq_style_default_edit_icon_skin"
+            android:text="美颜"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="match_parent" />
 
         <org.lasque.tusdk.core.view.TuSdkImageView
             android:id="@+id/lsq_shareButton"
