--- a/app/res/layout/custom_skin_fragment_layout.xml
+++ b/app/res/layout/custom_skin_fragment_layout.xml
@@ -21,6 +21,7 @@
         layout="@layout/custom_component_widget_parameter_config_view" />
 
     <HorizontalScrollView
+        android:scrollbars="none"
         android:id="@+id/lsq_option_wrap"
         android:layout_width="match_parent"
         android:layout_height="80dp"
