--- a/app/res/layout/custom_filter_bar_view.xml
+++ b/app/res/layout/custom_filter_bar_view.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="49dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/green_common2"
+        android:background="@color/green_common"
         android:orientation="horizontal" >
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
