--- a/app/res/layout/custom_filter_fragment_layout.xml
+++ b/app/res/layout/custom_filter_fragment_layout.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green_common2" >
+    android:background="@color/green_common" >
     
     <RelativeLayout
         android:id="@+id/lsq_imageWrapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="80dp"
-        android:background="@color/green_common2" >
+        android:background="@color/green_common" >
     </RelativeLayout>
 
    <RelativeLayout
