--- a/app/res/layout/custom_textedit_fragment_layout.xml
+++ b/app/res/layout/custom_textedit_fragment_layout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/green_common2" >
+        android:background="@color/green_common" >
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
             android:visibility="invisible"
