--- a/TuSDK/res/values/styles.xml
+++ b/TuSDK/res/values/styles.xml
@@ -95,4 +95,18 @@
 
     </style>
 
+    <!-- edit entry Option -->
+    <style name="lsq_edit_entryOptionButton2">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:textColor">@color/lsq_color_white</item>
+        <item name="android:textSize">12sp</item>
+
+    </style>
+
 </resources>
