--- a/app/res/layout/custom_sticker_list_grid.xml
+++ b/app/res/layout/custom_sticker_list_grid.xml
@@ -11,7 +11,8 @@
         android:id="@+id/lsq_posterWrap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp" >
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <!--android:padding="5dp"-->
         <!--android:background="#6ed5e5"-->
@@ -21,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
-        
+
             <!--<com.mixcolours.photoshare.custom.CircleImageView-->
 
                 <!--app:civ_fill_color="#6ed5d5"-->
@@ -36,11 +37,10 @@
 
 
         <ImageView
-            android:layout_margin="3dp"
+            android:layout_margin="2dp"
             android:background="@drawable/bg_circle_green"
-            android:padding="5dp"
+            android:padding="8dp"
             android:id="@+id/lsq_circlePosterView"
-            android:scaleType="fitCenter"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
