--- a/app/res/layout/custom_sticker_fragment_layout.xml
+++ b/app/res/layout/custom_sticker_fragment_layout.xml
@@ -43,6 +43,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
+            <RelativeLayout
+                android:visibility="gone"
+                android:id="@+id/lsq_blurlayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+
+                <com.mixcolours.photoshare.photoview.PhotoView
+                    android:layout_centerInParent="true"
+                    android:id="@+id/lsq_blurlayout_photoview"
+                    android:scaleType="fitCenter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <ImageView
+                    android:id="@+id/lsq_blurlayout_borader"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"
+                    android:scaleType="fitCenter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </RelativeLayout>
+
             <org.lasque.tusdk.core.view.widget.TuMaskRegionView
                 android:visibility="gone"
                 android:id="@+id/lsq_cutRegionView"
