--- a/app/res/layout/custom_sticker_fragment_layout.xml
+++ b/app/res/layout/custom_sticker_fragment_layout.xml
@@ -54,16 +54,15 @@
                     android:layout_centerInParent="true"
                     android:id="@+id/lsq_blurlayout_photoview"
                     android:scaleType="fitCenter"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:id="@+id/lsq_blurlayout_borader"
                     android:layout_centerInParent="true"
-                    android:visibility="gone"
                     android:scaleType="fitCenter"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </RelativeLayout>
 
