--- a/app/res/layout/activity_welcome.xml
+++ b/app/res/layout/activity_welcome.xml
@@ -19,7 +19,27 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        />
+        android:gravity="center_horizontal">
+
+        <!--<com.mixcolours.photoshare.custom.CustomIndicatorView-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp" />-->
+
+        <!--<com.mixcolours.photoshare.custom.CustomIndicatorView-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp" />-->
+
+        <!--<com.mixcolours.photoshare.custom.CustomIndicatorView-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp" />-->
+
+        <!--<com.mixcolours.photoshare.custom.CustomIndicatorView-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp" />-->
+    </LinearLayout>
 
 </FrameLayout>
