--- a/app/res/layout/demo_entry_activity.xml
+++ b/app/res/layout/demo_entry_activity.xml
@@ -7,8 +7,7 @@
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/top_background">
+        android:layout_weight="1">
         
         <ImageView 
             android:layout_width="wrap_content"
