--- a/app/res/layout/item_welcome_page.xml
+++ b/app/res/layout/item_welcome_page.xml
@@ -9,7 +9,9 @@
         android:layout_height="match_parent"
         android:scaleType="fitCenter"/>
 
-    <Button
+    <TextView
+        android:visibility="gone"
+        android:gravity="center"
         android:id="@+id/welcome_comein_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -24,22 +26,38 @@
         android:textColor="@color/green_common"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
-    </Button>
+    </TextView>
+
+    <!--<TextView-->
+        <!--android:textStyle="bold"-->
+        <!--android:background="@drawable/selector_btn_rectangle"-->
+        <!--android:id="@+id/welcome_close_btn"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="12dp"-->
+        <!--android:layout_marginTop="12dp"-->
+        <!--android:padding="5dip"-->
+        <!--android:textSize="14sp"-->
+        <!--android:textColor="@color/green_common"-->
+        <!--android:text="@string/welcome_paas"-->
+        <!--/>-->
 
     <TextView
-        android:textStyle="bold"
-        android:background="@drawable/selector_btn_rectangle"
+        android:gravity="center"
         android:id="@+id/welcome_close_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="12dp"
-        android:padding="5dip"
-        android:textSize="14sp"
-        android:textColor="@color/green_common"
+        android:layout_marginBottom="40dp"
+        android:padding="10dp"
+        android:scaleType="fitCenter"
         android:text="@string/welcome_paas"
-        />
-
+        android:background="@drawable/selector_btn_rectangle"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="@color/green_common"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+    </TextView>
 </RelativeLayout>
