新增过年照片

--- a/app/res/layout/item_welcome_page.xml
+++ b/app/res/layout/item_welcome_page.xml
@@ -13,11 +13,10 @@
         android:visibility="gone"
         android:gravity="center"
         android:id="@+id/welcome_comein_btn"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:padding="5dp"
         android:scaleType="fitCenter"
         android:text="@string/welcome_quickstart"
         android:background="@drawable/selector_btn_rectangle"
@@ -49,8 +48,8 @@
         android:id="@+id/welcome_close_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:padding="10dp"
+        android:layout_marginBottom="50dp"
+        android:padding="5dp"
         android:scaleType="fitCenter"
         android:text="@string/welcome_paas"
         android:background="@drawable/selector_btn_rectangle"
