--- a/app/res/drawable/bg_rectangle_white.xml
+++ b/app/res/drawable/bg_rectangle_white.xml
@@ -4,7 +4,7 @@
 	android:shape="rectangle">
 
 	<solid android:color="#22ffffff"/>
-	<stroke android:color="@color/white" android:width="1dp" />
+	<!--<stroke android:color="@color/white" android:width="1dp" />-->
 	<!-- android:radius 弧形的半径 -->
 	<corners android:radius="5dp"/>
 
