--- a/app/res/layout/demo_view_gif.xml
+++ b/app/res/layout/demo_view_gif.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@raw/sample_gif_editor"
-        />
 
+        />
+    <!--android:src="@raw/sample_gif_editor"-->
 </RelativeLayout>
